hide fullwidth items until they have broken free from their container.

--- a/includes/css/style.css
+++ b/includes/css/style.css
@@ -1417,3 +1417,10 @@ pre.pre-wrap {
 .wc-shortcodes-image-wrapper.aligncenter {
 	margin-bottom: 20px;
 }
+/**
+ * [wc_fullwidth]
+ * ----------------------------------------------------------------------------
+ */
+.wc-shortcodes-full-width {
+	visibility: hidden;
+}
