Fixed line-height style bug

--- a/includes/css/style.css
+++ b/includes/css/style.css
@@ -712,6 +712,7 @@
 }
 .wc-shortcodes-social-icons li a {
 	display: block;
+	line-height: 1;
 }
 .wc-shortcodes-social-icons li img {
 	max-height: 48px;
