--- a/includes/css/style.css
+++ b/includes/css/style.css
@@ -678,12 +678,14 @@
 .wc-shortcodes-social-icons-wrapper {
 	width: 100%;
 	margin-bottom: 14px;
+	line-height: 1;
 }
 .wc-shortcodes-social-icons {
 	list-style: none;
 	margin: 0;
 	padding: 0;
 	text-align: left;
+	line-height: 1;
 }
 .wc-shortcodes-social-icons.wc-shortcodes-social-icons-align-center {
 	text-align: center;
@@ -702,8 +704,20 @@
 .wc-shortcodes-social-icons.wc-shortcodes-social-icons-size-medium img {
 	max-height: 24px;
 }
+.wc-shortcodes-social-icons.wc-shortcodes-social-icons-size-medium i {
+	font-size: 14px;
+	width: 24px;
+	height: 24px;
+	line-height: 24px;
+}
 .wc-shortcodes-social-icons.wc-shortcodes-social-icons-size-small img {
 	max-height: 16px;
+}
+.wc-shortcodes-social-icons.wc-shortcodes-social-icons-size-small i {
+	font-size: 10px;
+	width: 16px;
+	height: 16px;
+	line-height: 16px;
 }
 .wc-shortcodes-social-icons li {
 	display: inline-block;
@@ -717,6 +731,35 @@
 .wc-shortcodes-social-icons li img {
 	max-height: 48px;
 }
+.wc-shortcodes-social-icons li i a {
+	position: relative;
+}
+.wc-shortcodes-social-icons li i {
+	font-size: 24px;
+	width: 48px;
+	height: 48px;
+	line-height: 48px;
+	overflow: hidden;
+	text-align: center;
+	vertical-align: middle;
+	background-color: #999999;
+	color: #ffffff;
+}
+.wc-shortcodes-social-icons li i.fa-facebook { background-color: #305999; }
+.wc-shortcodes-social-icons li i.fa-google-plus { background-color: #ee7321; }
+.wc-shortcodes-social-icons li i.fa-twitter { background-color: #00a7f1; }
+.wc-shortcodes-social-icons li i.fa-pinterest { background-color: #d64800; }
+.wc-shortcodes-social-icons li i.fa-instagram { background-color: #b2b2b4; }
+.wc-shortcodes-social-icons li i.fa-plus-square { background-color: #00b5fc; }
+.wc-shortcodes-social-icons li i.fa-flickr { background-color: #ff6182; }
+.wc-shortcodes-social-icons li i.fa-rss { background-color: #facf4c; }
+.wc-shortcodes-social-icons li i.fa-envelope { background-color: #ebe180; }
+.wc-shortcodes-social-icons li i.fa-dollar { background-color: #d46000; }
+.wc-shortcodes-social-icons li i.fa-camera { background-color: #333333; }
+.wc-shortcodes-social-icons li i.fa-shopping-cart { background-color: #a5d488; }
+.wc-shortcodes-social-icons li i.fa-youtube { background-color: #c74a00; }
+.wc-shortcodes-social-icons li i.fa-tumblr { background-color: #426b8a; }
+
 .wc-shortcodes-social-icons li:last-child {
 	margin-right: 0;
 }
@@ -1127,6 +1170,38 @@ pre.pre-wrap {
 .wc-shortcodes-social-icons.wc-shortcodes-maxheight-66 img { max-height: 66px; }
 .wc-shortcodes-social-icons.wc-shortcodes-maxheight-68 img { max-height: 68px; }
 .wc-shortcodes-social-icons.wc-shortcodes-maxheight-70 img { max-height: 70px; }
+
+.wc-shortcodes-social-icons.wc-shortcodes-maxheight-10 i { font-size: 6px; line-height: 10px; height: 10px; width: 10px; }
+.wc-shortcodes-social-icons.wc-shortcodes-maxheight-12 i { font-size: 8px; line-height: 12px; height: 12px; width: 12px; }
+.wc-shortcodes-social-icons.wc-shortcodes-maxheight-14 i { font-size: 8px; line-height: 14px; height: 14px; width: 14px; }
+.wc-shortcodes-social-icons.wc-shortcodes-maxheight-16 i { font-size: 10px; line-height: 16px; height: 16px; width: 16px; }
+.wc-shortcodes-social-icons.wc-shortcodes-maxheight-18 i { font-size: 10px; line-height: 18px; height: 18px; width: 18px; }
+.wc-shortcodes-social-icons.wc-shortcodes-maxheight-20 i { font-size: 12px; line-height: 20px; height: 20px; width: 20px; }
+.wc-shortcodes-social-icons.wc-shortcodes-maxheight-22 i { font-size: 12px; line-height: 22px; height: 22px; width: 22px; }
+.wc-shortcodes-social-icons.wc-shortcodes-maxheight-24 i { font-size: 14px; line-height: 24px; height: 24px; width: 24px; }
+.wc-shortcodes-social-icons.wc-shortcodes-maxheight-26 i { font-size: 14px; line-height: 26px; height: 26px; width: 26px; }
+.wc-shortcodes-social-icons.wc-shortcodes-maxheight-28 i { font-size: 16px; line-height: 28px; height: 28px; width: 28px; }
+.wc-shortcodes-social-icons.wc-shortcodes-maxheight-30 i { font-size: 16px; line-height: 30px; height: 30px; width: 30px; }
+.wc-shortcodes-social-icons.wc-shortcodes-maxheight-32 i { font-size: 18px; line-height: 32px; height: 32px; width: 32px; }
+.wc-shortcodes-social-icons.wc-shortcodes-maxheight-34 i { font-size: 18px; line-height: 34px; height: 34px; width: 34px; }
+.wc-shortcodes-social-icons.wc-shortcodes-maxheight-36 i { font-size: 18px; line-height: 36px; height: 36px; width: 36px; }
+.wc-shortcodes-social-icons.wc-shortcodes-maxheight-38 i { font-size: 20px; line-height: 38px; height: 38px; width: 38px; }
+.wc-shortcodes-social-icons.wc-shortcodes-maxheight-40 i { font-size: 20px; line-height: 40px; height: 40px; width: 40px; }
+.wc-shortcodes-social-icons.wc-shortcodes-maxheight-42 i { font-size: 22px; line-height: 42px; height: 42px; width: 42px; }
+.wc-shortcodes-social-icons.wc-shortcodes-maxheight-44 i { font-size: 22px; line-height: 44px; height: 44px; width: 44px; }
+.wc-shortcodes-social-icons.wc-shortcodes-maxheight-46 i { font-size: 24px; line-height: 46px; height: 46px; width: 46px; }
+.wc-shortcodes-social-icons.wc-shortcodes-maxheight-48 i { font-size: 24px; line-height: 48px; height: 48px; width: 48px; }
+.wc-shortcodes-social-icons.wc-shortcodes-maxheight-50 i { font-size: 26px; line-height: 50px; height: 50px; width: 50px; }
+.wc-shortcodes-social-icons.wc-shortcodes-maxheight-52 i { font-size: 26px; line-height: 52px; height: 52px; width: 52px; }
+.wc-shortcodes-social-icons.wc-shortcodes-maxheight-54 i { font-size: 28px; line-height: 54px; height: 54px; width: 54px; }
+.wc-shortcodes-social-icons.wc-shortcodes-maxheight-56 i { font-size: 28px; line-height: 56px; height: 56px; width: 56px; }
+.wc-shortcodes-social-icons.wc-shortcodes-maxheight-58 i { font-size: 30px; line-height: 58px; height: 58px; width: 58px; }
+.wc-shortcodes-social-icons.wc-shortcodes-maxheight-60 i { font-size: 30px; line-height: 60px; height: 60px; width: 60px; }
+.wc-shortcodes-social-icons.wc-shortcodes-maxheight-62 i { font-size: 32px; line-height: 62px; height: 62px; width: 62px; }
+.wc-shortcodes-social-icons.wc-shortcodes-maxheight-64 i { font-size: 32px; line-height: 64px; height: 64px; width: 64px; }
+.wc-shortcodes-social-icons.wc-shortcodes-maxheight-66 i { font-size: 34px; line-height: 66px; height: 66px; width: 66px; }
+.wc-shortcodes-social-icons.wc-shortcodes-maxheight-68 i { font-size: 34px; line-height: 68px; height: 68px; width: 68px; }
+.wc-shortcodes-social-icons.wc-shortcodes-maxheight-70 i { font-size: 36px; line-height: 70px; height: 70px; width: 70px; }
 
 
 /**
