--- a/includes/css/style.css
+++ b/includes/css/style.css
@@ -766,10 +766,14 @@
  * [wc_share]
  * ----------------------------------------------------------------------------
  */
+.wc-shortcodes-share-buttons {
+	line-height: 1;
+}
 .wc-shortcodes-share-buttons ul {
 	list-style: none;
 	margin: 0;
 	padding: 0;
+	line-height: 1;
 }
 .wc-shortcodes-share-buttons li {
 	display: inline-block;
@@ -777,13 +781,40 @@
 }
 .wc-shortcodes-share-buttons li a {
 	display: block;
+	line-height: 1;
 }
 .wc-shortcodes-share-buttons li a img {
+	vertical-align: top;
 	max-height: 36px;
 }
 .wc-shortcodes-share-buttons ul li:last-child {
 	margin-right: 0;
 }
+.wc-shortcodes-share-buttons li i {
+	font-size: 20px;
+	width: 36px;
+	height: 36px;
+	line-height: 36px;
+	overflow: hidden;
+	text-align: center;
+	vertical-align: top;
+	background-color: #999999;
+	color: #ffffff;
+}
+.wc-shortcodes-share-buttons li i.fa-facebook { background-color: #305999; }
+.wc-shortcodes-share-buttons li i.fa-google-plus { background-color: #ee7321; }
+.wc-shortcodes-share-buttons li i.fa-twitter { background-color: #00a7f1; }
+.wc-shortcodes-share-buttons li i.fa-pinterest { background-color: #d64800; }
+.wc-shortcodes-share-buttons li i.fa-instagram { background-color: #b2b2b4; }
+.wc-shortcodes-share-buttons li i.fa-plus-square { background-color: #00b5fc; }
+.wc-shortcodes-share-buttons li i.fa-flickr { background-color: #ff6182; }
+.wc-shortcodes-share-buttons li i.fa-rss { background-color: #facf4c; }
+.wc-shortcodes-share-buttons li i.fa-envelope { background-color: #ebe180; }
+.wc-shortcodes-share-buttons li i.fa-dollar { background-color: #d46000; }
+.wc-shortcodes-share-buttons li i.fa-camera { background-color: #333333; }
+.wc-shortcodes-share-buttons li i.fa-shopping-cart { background-color: #a5d488; }
+.wc-shortcodes-share-buttons li i.fa-youtube { background-color: #c74a00; }
+.wc-shortcodes-share-buttons li i.fa-tumblr { background-color: #426b8a; }
 
 
 /**
