--- a/includes/css/style.css
+++ b/includes/css/style.css
@@ -1393,6 +1393,7 @@ pre.pre-wrap {
 .wc-shortcodes-posts {
 	position: relative;
 	visibility: hidden;
+	overflow: hidden;
 }
 .wc-shortcodes-post-box {
 	background-color: #ffffff;
