--- a/includes/css/style.css
+++ b/includes/css/style.css
@@ -1425,6 +1425,7 @@ pre.pre-wrap {
 	background-color: #ffffff;
 	margin-bottom: 20px;
 	padding: 0;
+	display: none;
 }
 .wc-shortcodes-sep {
 	padding-left: 5px;
