Fixed style bug with post grid layout being hidden

--- a/includes/css/style.css
+++ b/includes/css/style.css
@@ -1425,6 +1425,8 @@ pre.pre-wrap {
 	background-color: #ffffff;
 	margin-bottom: 20px;
 	padding: 0;
+}
+.wc-shortcodes-posts-layout-masonry .wc-shortcodes-post-box {
 	display: none;
 }
 .wc-shortcodes-sep {
