--- a/admin/assets/css/wcpostsliderwidget.css
+++ b/admin/assets/css/wcpostsliderwidget.css
@@ -1,14 +1,18 @@
+html .wc-shortcodes-posts-widget.ui-accordion,
 html .wc-shortcodes-post-slider-widget.ui-accordion {
 	margin-bottom: 1.5em;
 }
+html .wc-shortcodes-posts-widget.ui-accordion .ui-autocomplete,
 html .wc-shortcodes-post-slider-widget.ui-accordion .ui-autocomplete {
 	z-index: 999999;
 	max-height: 300px;
 	overflow: auto;
 }
+html .wc-shortcodes-posts-widget.ui-accordion .ui-autocomplete li,
 html .wc-shortcodes-post-slider-widget.ui-accordion .ui-autocomplete li {
 	white-space: normal;
 }
+html .wc-shortcodes-posts-widget.ui-accordion .ui-accordion-header,
 html .wc-shortcodes-post-slider-widget.ui-accordion .ui-accordion-header {
 	border: 1px solid #ddd;
 	position: relative;
@@ -25,6 +29,7 @@ html .wc-shortcodes-post-slider-widget.ui-accordion .ui-accordion-header {
 	font-weight: 600;
 	margin-top: 1em;
 }
+html .wc-shortcodes-posts-widget.ui-accordion .ui-accordion-header:before,
 html .wc-shortcodes-post-slider-widget.ui-accordion .ui-accordion-header:before {
 	content: "\f345";
 	border: none;
@@ -45,6 +50,7 @@ html .wc-shortcodes-post-slider-widget.ui-accordion .ui-accordion-header:before 
 	vertical-align: bottom;
 	margin-right: 5px;
 }
+html .wc-shortcodes-posts-widget.ui-accordion .ui-accordion-header.ui-accordion-header-active:before,
 html .wc-shortcodes-post-slider-widget.ui-accordion .ui-accordion-header.ui-accordion-header-active:before {
 	content: "\f347";
 }
